<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333"
    tools:context=".Quadrinhos">

    <Button
        android:id="@+id/btnPesquisarQ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="pesquisarQuadrinhos"
        android:text="@string/btnPesquisar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtQuadrinhos" />

    <TextView
        android:id="@+id/lblDigitePesquisarQuadrinhos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblDigitePesquisarQuadrinhos"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/txtQuadrinhos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblPesquisarQuadrinhos" />

    <TextView
        android:id="@+id/lblPesquisarQuadrinhos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblPesquisarQuadrinhos"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/lblDigitePesquisarQuadrinhos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtQuadrinhos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtQuadrinhos"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/btnPesquisarQ"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblDigitePesquisarQuadrinhos" />
</androidx.constraintlayout.widget.ConstraintLayout>